[project]
name = "stock-rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "catppuccin-jupyterlab>=0.2.4",
    "jupyterlab>=4.3.4",
    "jupyterlab-vim>=4.1.4",
    "python-lsp-server[all]>=1.12.0",
    "tensorflow>=2.18.0",
]
